Deployment/server/kubernetes/gke-standard/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "thinkmay-ip"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: managed-cert
spec:
  rules:
  - host: conductor.thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: conductor
            port:
              number: 80

  #
  - host: signalling.thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: signalling
            port:
              number: 80


  - host: slavemanager.thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: slavemanager
            port:
              number: 80
              
  - host: thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: landing-page
            port:
              number: 80

  - host: service.thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-page
            port:
              number: 80
